--- a/src/main/javascript/app/app.component/app.component.html
+++ b/src/main/javascript/app/app.component/app.component.html
@@ -1,6 +1,3 @@
-<nav>
-    <a [routerLink]="['/dashboard']">Dashboard</a>
-    <a [routerLink]="['/server']">Server</a>
-    <a [routerLink]="['/404']">NotFound</a>
-</nav>
-<router-outlet></router-outlet>
+<div ng-repeat="pie in chartArray">
+    <!--<pie-chart data="storeData"></pie-chart>-->
+</div>
